# learndash-python

./: .gitignore  LICENSE  README.md  setup.cfg
learndash/: __init__.py  api_requestor.py
learndash/api_resources/abstract/: __init__.py  listable_api_resource.py  retrievable_api_resource.py
src/learndash/: __init__.py  api_requestor.py  exceptions.py
src/learndash/api_resources/: __init__.py  course.py  typing.py  user.py
src/learndash/api_resources/abstract/: __init__.py  api_resource.py  listable_api_resource.py  nested_api_resource.py  retrievable_api_resource.py  updateable_api_resource.py
