[metadata]
name = learndash
version = 0.0.4
author = Jorgen Hookham
author_email = jorgen@buildnode.io
description = A python wrapper for a LearnDash API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/buildnode/learndash-python
project_urls =
    Bug Tracker = https://github.com/buildnode/learndash-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.packages.find]
where = src

